# hello_grpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  cli_lite  hello.proto  main.cpp  people.proto
cli/: main.cpp
cli/.cache/clangd/index/: main.cpp.B82CF356C6C6CF50.idx
cmake/: linux_toolchains.cmake
cmake/re2/: re2Config.cmake  re2Targets.cmake
grpc/: people.grpc.pb.cc  people.grpc.pb.h  people.pb.cc  people.pb.h
lib/: libre2.so.11  libre2.so.11.0.0
local_server/: main.cpp
pkgconfig/: re2.pc
